<resources>
    <string name="app_name">Weather App</string>
    <string name="time">Time</string>
    <string name="temp">Temp</string>
    <string name="chance_of_rain">Chance \n of Rain</string>
    <string name="wind_mph">Wind \n (mph)</string>
    <string name="humidity">Humidity</string>
    <string name="search">Search City</string>
    <string name="remove">Remove City</string>
    <string name="radar">Radar</string>
    <string name="remove_button_title">Remove</string>
    <string name="radar_button_title">Radar</string>
    <string name="close_description">Close</string>
    <string name="enter_city">Enter City</string>
    <string name="no_results_found">No Results Found</string>
    <string name="no_data_to_display">No data to display</string>
    <string name="non_existent">--</string>

    // Days
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>

    // Hours
    <string name="one_am">1AM</string>
    <string name="one_pm">1PM</string>
    <string name="two_am">2AM</string>
    <string name="two_pm">2PM</string>
    <string name="three_am">3AM</string>
    <string name="three_pm">3PM</string>
    <string name="four_am">4AM</string>
    <string name="four_pm">4PM</string>
    <string name="five_am">5AM</string>
    <string name="five_pm">5PM</string>
    <string name="six_am">6AM</string>
    <string name="six_pm">6PM</string>
    <string name="seven_am">7AM</string>
    <string name="seven_pm">7PM</string>
    <string name="eight_am">8AM</string>
    <string name="eight_pm">8PM</string>
    <string name="nine_am">9AM</string>
    <string name="nine_pm">9PM</string>
    <string name="ten_am">10AM</string>
    <string name="ten_pm">10PM</string>
    <string name="eleven_am">11AM</string>
    <string name="eleven_pm">11PM</string>
    <string name="twelve_am">12AM</string>
    <string name="twelve_pm">12PM</string>

    <string name="unexpected_error">Unexpected Error</string>
    <string name="unsuccessful_request">Unsuccessful Request for %s</string>
    <string name="network_unavailable">Network Unavailable</string>
    <string name="invalid_city">Invalid city selected.</string>
    <string name="invalid_query">Please enter a valid city.</string>
</resources>